Update author avatar in configuration

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Shi Jie Samuel Tan"
-  avatar           : "sam.jpg"
+  avatar           : "ShiJieSamuelTan_pfp.jpeg"
   bio              : "An aspiring CS theorist hoping to bring quantum algorithms to life with quantum error correction and fault tolerance"
   location         : "College Park, MD, USA"
   employer         :
